[SC-9069] decreased width of account name, added padding to avoid overlapping of right scrollbar

--- a/src/shared/cfo/bank-accounts/business-entities-chooser/business-entities-chooser.component.less
+++ b/src/shared/cfo/bank-accounts/business-entities-chooser/business-entities-chooser.component.less
@@ -1,7 +1,5 @@
 :host {
     width: 280px;
-    display: flex;
-    justify-content: center;
     dx-drop-down-box {
         background: transparent;
     }
